Remove button rounded corners and fix mobile column overlap

--- a/app/styles/buttons.css
+++ b/app/styles/buttons.css
@@ -6,7 +6,7 @@
   --btn-hover-fg: #fff;
   --btn-hover-bg: #333;
   --btn-hover-border: #333;
-  --btn-radius: 50px;
+  --btn-radius: 0px;
   --btn-border-w: 0px;
 }
 
